Update background image

--- a/fruit-ninja/index.html
+++ b/fruit-ninja/index.html
@@ -194,7 +194,7 @@
 
           <figure>
             <a href="/projects/fruitninja.com/vr" title="Visit Fruit Ninja VR webpage"
-              ><img src="../images/page/screen-fruit-ninja-vr.jpg" alt="Screenshot of Fruit Ninja VR webpage"
+              ><img src="../images/page/screen-fruit-ninja-vr.jpg" alt="Screenshot of Fruit Ninja VR webpage" loading="lazy"
             /></a>
           </figure>
 
@@ -220,6 +220,7 @@
               ><img
                 src="../images/page/screen-fruit-ninja-anniversary.jpg"
                 alt="Screenshot of Fruit Ninja Anniversary webpage"
+                loading="lazy"
             /></a>
           </figure>
 
@@ -257,7 +258,7 @@
         <ul class="grid-third">
           <li>
             <a href="https://github.com/seanockert" title="View Github projects">
-              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 97 93">
+              <svg fill="none" viewBox="0 0 97 93">
                 <path
                   fill="currentColor"
                   fill-rule="evenodd"
