--- a/halfbrick/index.html
+++ b/halfbrick/index.html
@@ -212,53 +212,53 @@
           <ul class="grid-quarter icon-list">
             <li>
               <a href="/projects/danthemangame.com/" title="Visit Dan the Man website"
-                ><img src="/images/icons/icon-dtm.png" height="96" alt="Dan The Man icon" />Dan The Man</a
+                ><img src="/images/icons/icon-dtm.png" height="96" alt="Dan The Man icon" width="100" height="100" loading="lazy" / >Dan The Man</a
               >
             </li>
             <li>
               <a href="/projects/bearsvsart.com/" title="Visit Bears vs. Art website"
-                ><img src="/images/icons/icon-bva.png" height="96" alt="Bears vs. Art icon" />Bears vs. Art</a
+                ><img src="/images/icons/icon-bva.png" height="96" alt="Bears vs. Art icon" width="100" height="100" loading="lazy" / >Bears vs. Art</a
               >
             </li>
             <li>
               <a href="/projects/starskatergame.com/" title="Visit Star Staker website"
-                ><img src="/images/icons/icon-ss.png" height="96" alt="Star Skater icon" />Star Skater</a
+                ><img src="/images/icons/icon-ss.png" height="96" alt="Star Skater icon" width="100" height="100" loading="lazy" / >Star Skater</a
               >
             </li>
             <li>
               <a href="/projects/jetpackjoyride.net/" title="Visit Jetpack Joyride website"
-                ><img src="/images/icons/icon-jj.png" height="96" alt="Jetpack Joyride icon" />Jetpack Joyride</a
+                ><img src="/images/icons/icon-jj.png" height="96" alt="Jetpack Joyride icon" width="100" height="100" loading="lazy" / >Jetpack Joyride</a
               >
             </li>
             <li>
               <a href="/projects/fruitninja.com/" title="Visit Fruit Ninja website"
-                ><img src="/images/icons/icon-fn.png" height="96" alt="Fruit Ninja icon" />Fruit Ninja</a
+                ><img src="/images/icons/icon-fn.png" height="96" alt="Fruit Ninja icon" width="100" height="100" loading="lazy" / >Fruit Ninja</a
               >
             </li>
             <li>
               <a href="/projects/bandstars.com" title="Visit Band Stars website"
-                ><img src="/images/icons/icon-bs.png" height="96" alt="Band Stars icon" />Band Stars</a
+                ><img src="/images/icons/icon-bs.png" height="96" alt="Band Stars icon" width="100" height="100" loading="lazy" / >Band Stars</a
               >
             </li>
             <li>
               <a href="/projects/yeschefgame.com/" class="no-barba" title="Visit Yes Chef website"
-                ><img src="/images/icons/icon-yc.png" height="96" alt="Yes Chef icon" />Yes Chef</a
+                ><img src="/images/icons/icon-yc.png" height="96" alt="Yes Chef icon" width="100" height="100" loading="lazy" / >Yes Chef</a
               >
             </li>
             <li>
               <a href="/projects/radicalrappelling.com/" title="Visit Radical Rappelling website"
-                ><img src="/images/icons/icon-rr.png" height="96" alt="Radical Rappelling icon" />Radical
+                ><img src="/images/icons/icon-rr.png" height="96" alt="Radical Rappelling icon" width="100" height="100" loading="lazy" / >Radical
                 Rappelling</a
               >
             </li>
             <li>
               <a href="/projects/colossatron.com/" title="Visit Colossatron website"
-                ><img src="/images/icons/icon-cs.png" height="96" alt="Colossatron icon" />Colossatron</a
+                ><img src="/images/icons/icon-cs.png" height="96" alt="Colossatron icon" width="100" height="100" loading="lazy" / >Colossatron</a
               >
             </li>
             <li>
               <a href="/projects/fishoutofwatergame.com/" title="Visit Fish Out Of Water website"
-                ><img src="/images/icons/icon-foow.png" height="96" alt="Fish out of Water icon" />Fish out of
+                ><img src="/images/icons/icon-foow.png" height="96" alt="Fish out of Water icon" width="100" height="100" loading="lazy" / >Fish out of
                 Water</a
               >
             </li>
@@ -278,7 +278,7 @@
           <h4 id="release-calendar">Release Calendar</h4>
 
           <figure>
-            <img src="/images/page/screen-halfbrick-calendar.jpg" alt="Screenshot of Calendar app" />
+            <img src="/images/page/screen-halfbrick-calendar.jpg" alt="Screenshot of Calendar app" loading="lazy" />
           </figure>
 
           <p>This calendar was made for the producers to keep track of upcoming release dates.</p>
@@ -296,7 +296,7 @@
           <h4 id="bug-tracker-dashboard">TestTrack Bug Tracker Dashboard</h4>
 
           <figure>
-            <img src="/images/page/screen-halfbrick-bugtracker.jpg" alt="Screenshot of Bug Tracker app" />
+            <img src="/images/page/screen-halfbrick-bugtracker.jpg" alt="Screenshot of Bug Tracker app" loading="lazy" />
           </figure>
 
           <p>
@@ -310,7 +310,7 @@
           <h4 id="burndown-chart">Project Burndown Chart</h4>
 
           <figure>
-            <img src="/images/page/screen-halfbrick-burndown.jpg" alt="Screenshot of Burndown Charts app" />
+            <img src="/images/page/screen-halfbrick-burndown.jpg" alt="Screenshot of Burndown Charts app" loading="lazy" />
           </figure>
 
           <p>This dashboard tracks how the team is progressing through its current 2 week sprint.</p>
@@ -326,7 +326,7 @@
           <h3>Branding</h3>
 
           <figure>
-            <img src="/images/page/screen-halfbrick-branding.jpg" alt="Screenshot of Halfbrick logo alternatives" />
+            <img src="/images/page/screen-halfbrick-branding.jpg" alt="Screenshot of Halfbrick logo alternatives" loading="lazy" />
           </figure>
 
           <p>In 2014, I was asked to investigate refreshing the Halfbrick logo.</p>
@@ -349,7 +349,7 @@
             <a
               href="/projects/colossatron-mini-world-threat/"
               title="Play the Mini World Threat game"
-              ><img src="/images/page/screen-halfbrick-game.jpg" alt="Screenshot of Mini World Threat game"
+              ><img src="/images/page/screen-halfbrick-game.jpg" alt="Screenshot of Mini World Threat game" loading="lazy"
             /></a>
           </figure>
 
@@ -375,7 +375,7 @@
         <ul class="grid-third">
           <li>
             <a href="https://github.com/seanockert" title="View Github projects">
-              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 97 93">
+              <svg fill="none" viewBox="0 0 97 93">
                 <path
                   fill="currentColor"
                   fill-rule="evenodd"
