--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                 href="https://intellihr.gitlab.io/engineering/blueberry/storybook/"
                 title="Visit the Blueberry Design System storybook"
               >
-                <img src="images/thumb-blueberry.webp" alt="Blueberry Design System" />
+                <img src="images/thumb-blueberry.webp" alt="Blueberry Design System" height="400" width="800" loading="lazy" />
               </a>
             </figure>
 
@@ -273,7 +273,7 @@
           <li class="stack project">
             <figure>
               <a href="https://www.teachstarter.com" title="Visit the Teach Starter website">
-                <img src="images/thumb-teach-starter.webp" alt="Teach Starter website" />
+                <img src="images/thumb-teach-starter.webp" alt="Teach Starter website" height="400" width="800" loading="lazy" />
               </a>
             </figure>
 
@@ -289,7 +289,7 @@
           <li class="stack project">
             <figure>
               <a href="/assess" title="Read more about Teach Starter Assess">
-                <img src="images/thumb-assess.webp" alt="Teach Starter Assess app"
+                <img src="images/thumb-assess.webp" alt="Teach Starter Assess app" height="400" width="800" loading="lazy"
               /></a>
             </figure>
 
@@ -304,7 +304,7 @@
           <li class="stack project">
             <figure>
               <a href="/neto" title="Read Neto Ecommerce case study"
-                ><img src="images/thumb-neto.webp" alt="Neto homepage"
+                ><img src="images/thumb-neto.webp" alt="Neto homepage" height="400" width="800" loading="lazy"
               /></a>
             </figure>
 
@@ -320,7 +320,7 @@
           <li class="stack project">
             <figure>
               <a href="/halfbrick" title="Read Halfbrick case study">
-                <img src="images/thumb-halfbrick.webp" alt="Halfbrick website"
+                <img src="images/thumb-halfbrick.webp" alt="Halfbrick website" height="400" width="800" loading="lazy"
               /></a>
             </figure>
 
@@ -335,7 +335,7 @@
           <li class="stack project">
             <figure>
               <a href="/fruit-ninja" title="Read Fruit Ninja case study"
-                ><img src="images/thumb-fruit-ninja-homepage.webp" alt="Fruit Ninja homepage"
+                ><img src="images/thumb-fruit-ninja-homepage.webp" alt="Fruit Ninja homepage" height="400" width="800" loading="lazy"
               /></a>
             </figure>
 
@@ -347,7 +347,7 @@
           <li class="stack project">
             <figure>
               <a href="https://thesteepery.com.au" title="Visit The Steepery website"
-                ><img src="images/thumb-the-steepery.webp" alt="The Steepery online store"
+                ><img src="images/thumb-the-steepery.webp" alt="The Steepery online store" height="400" width="800" loading="lazy"
               /></a>
             </figure>
 
@@ -436,7 +436,7 @@
         <ul class="grid-third">
           <li>
             <a href="https://github.com/seanockert" title="View Github projects">
-              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 97 93">
+              <svg fill="none" viewBox="0 0 97 93">
                 <path
                   fill="currentColor"
                   fill-rule="evenodd"
