--- a/neto/index.html
+++ b/neto/index.html
@@ -126,8 +126,8 @@
 
           <p>
             Neto (now Maropost) offers a SaaS platform for businesses to run their ecommerce store and point-of-sale on,
-            as well as tools to manage their stock management and warehouses. They also do in-house website development
-            for clients who use the ecommerce platform.
+            as well as tools to manage their inventory. Neto also do in-house website development for clients who use
+            the ecommerce platform.
           </p>
 
           <figure>
@@ -142,7 +142,7 @@
 
           <p>I joined Neto in 2017 to take ownership of the Neto public website.</p>
 
-          <p>Along with building out our web capabilities, my role also encompassed:</p>
+          <p>Along with building out our web capabilities, I also worked on:</p>
           <ul>
             <li>user acquisition</li>
             <li>marketing campaigns</li>
@@ -157,14 +157,14 @@
           <h3>What? We have no landing pages?</h3>
 
           <p>
-            Before I joined Neto, the marketing team had no way to create dedicated landing pages for campaigns. Most
-            paid acquisition were directed to the homepage or the free trial page, which were low relevance to the
-            actual campaigns and therefore gave us junk quality scores.
+            Before I joined Neto, the marketing team had no way to create dedicated landing pages for campaigns. Paid
+            acquisition were directed to the homepage or the free trial page, which were of low relevance and thus gave
+            us junk quality scores.
           </p>
 
           <p>
-            The first win for the new CMS was to give marketing staff the ability to build landing pages from a set of
-            pre-defined components.
+            The first win for moving to CraftCMS was to give marketing staff the ability to build landing pages from a
+            set of pre-defined components.
           </p>
 
           <figure>
@@ -173,20 +173,22 @@
               alt="Example of a Neto landing page"
               height="543"
               width="990"
+              loading="lazy"
             />
             <figcaption>A landing page hero section</figcaption>
           </figure>
 
           <p>
-            We established a list of components (eg. hero banner, feature list, call-to-action, etc.) and every possible
-            permutations they might have. From this, I built flexible templates and data structures using Craft’s matrix
-            to accommodate different messaging and layouts.
+            We established a list of components (eg. hero banner, feature list, call-to-action, etc.) and all possible
+            permutations. From this, I built flexible templates and data structures using CraftCMS’s powerful matrix to
+            accommodate different layouts and copy.
           </p>
 
           <p>
-            I worked closely with everyone who needed to build a landing page we went through a few iterations, both for
-            the visual layouts which were A/B tested for best click-through rate and how the content could be edited.
-            From this, I wrote up guidelines on how to create a landing page and best practices.
+            I engaged everyone who needed to create a landing page, including sales, marketing, and the partners team.
+            We went through a few iterations, testing visual layouts for best click-through rate, and tweaking the
+            content editor to make it as intuitive as possible. I then documented the process, results, and best
+            practices.
           </p>
 
           <h4>Wins</h4>
@@ -195,7 +197,7 @@
 
           <ul>
             <li>Reduce our ad spending</li>
-            <li>Match the messaging with content</li>
+            <li>Match the ad messaging to the page content</li>
             <li>Better attribute conversions to their campaign</li>
           </ul>
 
@@ -209,22 +211,22 @@
               own HTML proved a nightmare to maintain and unclosed tags could break the page.
             </li>
             <li>
-              Authors do not understand responsive design; that their content needs to adapt to mobile. Eg. insistence
-              on “above the fold” and using too large images.
+              Authors don't understand responsive design; and don't ever test on mobile. Eg. insistence on “above the
+              fold” content, and using images that were too large.
             </li>
           </ul>
 
           <h3>Migrating the Neto website</h3>
 
           <p>
-            The website is key for acquiring new customers, as Neto’s acquisition (and our target metrics) focused on
+            The website is key for acquiring new customers. Neto’s acquisition (and our target metrics) relied on
             converting prospects to a free trial of the ecommerce product; followed by a sales call.
           </p>
 
           <p>
-            Neto had built up its customer-base from Australian retailers, but was looking to expand to an international
-            market. This involved not only updates to the product, but also migrating the established, public website
-            from an Australian domain: <em>neto.com.au</em>, to a global domain: <em>netohq.com</em>.
+            Neto had built its customer-base from Australian retailers, but was looking to expand to an international
+            market. This involved not only updates to the product, but migrating an established, public website from an
+            Australian domain: <em>neto.com.au</em>, to a global domain: <em>netohq.com</em>.
           </p>
 
           <p>
@@ -235,8 +237,8 @@
           <h4>Setting up a new shop</h4>
 
           <p>
-            The website on the <em>neto.com.au</em> domain was built on Neto’s own SaaS platform, which&mdash;although
-            applicable for ecommerce&mdash;lacked the capability required to be the content management system that we
+            The website on the <em>neto.com.au</em> domain was built using Neto’s own SaaS platform, which&mdash;although
+            decent for ecommerce&mdash;lacked the capability required to be the content management system that we
             needed. I took this opportunity to completely rebuild the site with a dedicated CMS and modern web
             standards. This would help achieve our migration goals, which were:
           </p>
@@ -254,7 +256,7 @@
           </ol>
 
           <p>
-            I evaluated several content management systems and settled on <strong>Craft CMS</strong> for its ease of
+            I evaluated several content management systems and settled on <strong>CraftCMS</strong> for its ease of
             development, flexible template model and community support.
           </p>
 
@@ -264,7 +266,7 @@
           </p>
 
           <p>
-            As the sole developer, building on Craft CMS has been a very good experience, and allowed me to address
+            As the sole developer, building on CraftCMS has been a great experience, and allowed me to address
             feature requests and implement changes rapidly.
           </p>
 
@@ -293,11 +295,6 @@
             so the initial reduction in organic traffic was mitigated. The move was necessary for our business roadmap.
             Sometimes you have to ignore sunk costs to move forwards.
           </p>
-
-          <!--<figure>
-              <img src="/images/page/screen-neto-roadmap.jpg" alt="Screenshot of a Neto roadmap" height="404" width="877">
-              <figcaption>Neto product roadmap page. <a href="https://www.netohq.com/roadmap" title="View roadmap page">Source</a></figcaption>
-            </figure> -->
 
           <h3>Finding experts and add-ons for your store</h3>
 
@@ -377,6 +374,7 @@
               alt="Screenshot of a Neto add-ons quick-view"
               height="677"
               width="959"
+              loading="lazy" 
             />
             <figcaption>Add-ons listing quick-view loads via AJAX in a modal</figcaption>
           </figure>
@@ -398,6 +396,7 @@
               alt="Screenshot of a Neto experts listing filters"
               height="511"
               width="1210"
+              loading="lazy"
             />
             <figcaption>Experts can be filtered by service, location or budget; and saved for later.</figcaption>
           </figure>
@@ -439,6 +438,7 @@
               alt="Screenshot of the Neto pricing plans"
               height="715"
               width="1183"
+              loading="lazy"
             />
             <figcaption>
               New pricing plans. <a href="https://www.netohq.com/pricing" title="Visit pricing page">Source</a>
@@ -485,35 +485,40 @@
             <li>Email them a quote</li>
           </ul>
 
-          <figure class="img-three">
-            <img
-              src="/images/page/screen-neto-calculator-1.jpg"
-              alt="Screenshot of a Neto pricing calculator on mobile 1"
-              height="750"
-              width="1250"
-            />
-            <img
-              src="/images/page/screen-neto-calculator-2.jpg"
-              alt="Screenshot of a Neto pricing calculator on mobile 2"
-              height="750"
-              width="1250"
-            />
-            <img
-              src="/images/page/screen-neto-calculator-3.jpg"
-              alt="Screenshot of a Neto pricing calculator on mobile 3"
-              height="750"
-              width="1250"
-            />
+          <figure>
+            <div class="grid-third">
+              <div>
+                <img
+                  src="/images/page/screen-neto-calculator-1.jpg"
+                  alt="Screenshot of a Neto pricing calculator on mobile 1"
+                  height="750"
+                  width="1250"
+                  loading="lazy"
+                />
+              </div>
+              <div>
+                <img
+                  src="/images/page/screen-neto-calculator-2.jpg"
+                  alt="Screenshot of a Neto pricing calculator on mobile 2"
+                  height="750"
+                  width="1250"
+                  loading="lazy"
+                />
+              </div>
+              <div>
+                <img
+                  src="/images/page/screen-neto-calculator-3.jpg"
+                  alt="Screenshot of a Neto pricing calculator on mobile 3"
+                  height="750"
+                  width="1250"
+                  loading="lazy"
+                />
+              </div>
+            </div>
             <figcaption>Pricing calculator on mobile</figcaption>
           </figure>
 
-          <!-- <figure class="inline">
-              <img src="/images/page/screen-neto-pricing-calculator-results.jpg" alt="Screenshot of the Neto pricing calculator results" height="548" width="388">
-              <figcaption>New pricing plans</figcaption>
-            </figure> -->
-
           <p>
-            <!--<img src="/images/page/screen-neto-pricing-calculator-results.jpg" alt="Screenshot of the Neto pricing calculator results" height="548" width="388">-->
             The calculator was built quickly using VueJS. The reactive data-binding allowed the price estimate to change
             immediately based on their selection.
           </p>
@@ -525,17 +530,23 @@
           </p>
 
           <p>
-            This has been helpful for Neto's design partners as well, as they're able to better quote their own clients.
+            This was also useful for Neto’s design partners, enabling them to more accurately quote their clients.
           </p>
 
           <figure>
-            <img src="/images/page/screen-neto-case-study-listing.jpg" alt="Case studies" height="467" width="803" />
+            <img src="/images/page/screen-neto-case-study-listing.jpg" alt="Case studies" height="467" width="803" loading="lazy" />
             <figcaption>Case studies</figcaption>
           </figure>
 
-          <figure class="img-two">
-            <img src="/images/page/screen-neto-xl.jpg" alt="XL plan microsite on mobile" height="668" width="377" />
-            <img src="/images/page/screen-neto-manage.jpg" alt="XL plan microsite on mobile" height="668" width="377" />
+          <figure>
+            <div class="grid-half">
+              <div>
+                <img src="/images/page/screen-neto-xl.jpg" alt="XL plan microsite on mobile" height="668" width="377" loading="lazy" />
+              </div>
+              <div>
+                <img src="/images/page/screen-neto-manage.jpg" alt="XL plan microsite on mobile" height="668" width="377" loading="lazy" />
+              </div>
+            </div>
             <figcaption>XL page and Manage overview on mobile</figcaption>
           </figure>
         </article>
@@ -547,7 +558,7 @@
         <ul class="grid-third">
           <li>
             <a href="https://github.com/seanockert" title="View Github projects">
-              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 97 93">
+              <svg fill="none" viewBox="0 0 97 93">
                 <path
                   fill="currentColor"
                   fill-rule="evenodd"
