--- a/index.html
+++ b/index.html
@@ -195,10 +195,10 @@
             </span>
             <b>p</b><b>r</b><b>o</b><b>b</b><b>l</b><b>e</b><b>m</b><b>s</b><b>.</b>
           </h1>
-          <p class="p1">Product design problems, <span>that is.</span></p>
+          <p class="p1">Product design problems, that is.</p>
           <p class="p2">
-            Web developer and UX designer from sunny Brisbane with a knack for clarity, blazing performance,
-            <span>and usability.</span>
+            Web developer and UX designer from sunny Brisbane with a knack for clarity, blazing performance, and
+            usability.
           </p>
         </header>
       </section>
@@ -227,10 +227,7 @@
                 >Blueberry Design System</a
               >
             </h3>
-            <p>
-              A library of 60+ React &amp; Figma UI components for building applications
-              <span>at intelliHR.</span>
-            </p>
+            <p>A library of 60+ React &amp; Figma UI components for building applications at intelliHR.</p>
           </li>
           <li class="stack project shiny">
             <figure>
@@ -249,8 +246,7 @@
             </h3>
             <p>
               Online marketplace for primary school teaching resources. Lead front-end developer for re-building the
-              core product on Nuxt.js including UI and pattern library, API schemas,
-              <span>cross-domain auth, SEO.</span>
+              core product on Nuxt.js including UI and pattern library, API schemas, cross-domain auth, SEO.
             </p>
           </li>
           <li class="stack project shiny">
@@ -285,8 +281,7 @@
             </h3>
             <p>
               All-in-one ecommerce SaaS product. Re-built website in CraftCMS, re-built support hub in Salesforce,
-              optimised sales funnels and user onboarding, improved product usability,
-              <span>marketing campaigns.</span>
+              optimised sales funnels and user onboarding, improved product usability, marketing campaigns.
             </p>
           </li>
           <li class="stack project shiny">
@@ -301,7 +296,7 @@
             </h3>
             <p>
               Created gaming websites, interactive web apps, promos, &amp; online marketing for millions of monthly
-              <span>active users.</span>
+              active users.
             </p>
           </li>
           <li class="stack project shiny">
@@ -319,7 +314,7 @@
             <h3>
               <a href="/fruit-ninja" title="Read Fruit Ninja case study">Fruit Ninja</a>
             </h3>
-            <p>Websites &amp; marketing campaigns for one of the most popular mobile <span>games ever.</span></p>
+            <p>Websites &amp; marketing campaigns for one of the most popular mobile games ever.</p>
           </li>
           <li class="stack project shiny">
             <figure>
@@ -336,23 +331,46 @@
             <h3>
               <a href="https://thesteepery.com.au" title="Visit The Steepery website">The Steepery</a>
             </h3>
-            <p>
-              Bespoke Shopify store selling boutique
-              <span>tea products.</span>
-            </p>
+            <p>Bespoke Shopify store selling boutique tea products.</p>
           </li>
         </ul>
       </section>
       <section class="section portfolio stack">
-        <h2>Side Projects</h2>
+        <h2>Some Side Projects</h2>
         <ul class="grid-half">
+          <li class="stack project shiny">
+            <h3>
+              <a href="https://github.com/seanockert/patient-wait-dashboard" title="View on Github">
+                Patient Wait Dashboard
+              </a>
+            </h3>
+            <p>
+              To display in a hospital Emergency Department. Uses a websocket server to sync patients waiting and
+              estimate the wait time across multiple devices.
+            </p>
+          </li>
+          <li class="stack project shiny">
+            <h3>
+              <a href="https://github.com/seanockert/secret-santa" title="View on Github">Secret Santa Matcher</a>
+            </h3>
+            <p>
+              Generate random matches for a game of Secret Santa. Works without a DB or complex backend. Each
+              participant gets an encoded URL to reveal their match.
+            </p>
+          </li>
+          <li class="stack project shiny">
+            <h3>
+              <a href="https://so-css-layouts.surge.sh" title="View on Github">CSS Layouts</a>
+            </h3>
+            <p>Who needs a grid system any more? Some useful CSS layouts to drop into any project.</p>
+          </li>
           <li class="stack project shiny">
             <h3>
               <a href="https://so-tinysums.surge.sh/" title="View TinySums project">Tiny Sums</a>
             </h3>
             <p>
-              Do back-of-the-envelope calculations using everyday words. A fun test of regex skills to build a
-              <span>language parser in JS.</span>
+              Do back-of-the-envelope calculations using everyday words. A fun test of regex skills to build a language
+              parser in JS.
             </p>
           </li>
           <li class="stack project shiny">
@@ -373,10 +391,7 @@
                 >Email Content Generator</a
               >
             </h3>
-            <p>
-              Construct emails from pre-witten content. Simple internal tool for
-              <span>Neto sales staff.</span>
-            </p>
+            <p>Construct emails from pre-witten content. Simple internal tool for Neto sales staff.</p>
           </li>
         </ul>
       </section>
@@ -384,21 +399,21 @@
         <h2>Skills</h2>
         <div class="grid-half">
           <ul class="skills">
-            <li><strong>HTML &amp; CSS</strong> · SASS, styled components, atomic design, SEO, WCAG accessibility</li>
+            <li><strong>HTML &amp; CSS</strong> · WCAG 2, Radix, atomic design, SEO, latest CSS things</li>
             <li><strong>JavaScript</strong> · Vue, React, TypeScript, EsLint, Webpack, Vite</li>
             <li><strong>Design</strong> · Sketch, Figma, Photoshop, Illustrator</li>
-            <li><strong>Testing</strong> · Jest, Cypress, A/B testing, CI/CD tools</li>
+            <li><strong>Testing</strong> · Vitest, Jest, Cypress, A/B testing, CI/CD tools</li>
             <li><strong>PHP</strong> · Laravel, CraftCMS, WordPress</li>
-            <li><strong>Server-side</strong> · NodeJS, Nginx/Apache, AWS, Serverless</li>
+            <li><strong>Server-side</strong> · NodeJS, Nginx/Apache, AWS, Serverless/Lambda</li>
             <li><strong>Ecommerce</strong> · Shopify, Amazon</li>
             <li><strong>Web Graphics</strong> · SVG, Canvas</li>
-            <li><strong>Analytics</strong> · Segment, Amplitude, Google Analytics</li>
+            <li><strong>Analytics</strong> · Segment, Mixpanel, Amplitude, GA</li>
           </ul>
 
           <ul class="skills">
-            <li><strong>Marketing</strong> · Social media, email campaigns</li>
-            <li><strong>Game Development</strong> · Unity3D, Phaser</li>
-            <li><strong>English Teaching</strong> · CELTA certified</li>
+            <li><strong>Marketing</strong> · Social media, email campaigns, copywriting</li>
+            <li><strong>Game Development</strong> · Unity, Phaser</li>
+            <li><strong>English</strong> · CELTA certified teacher</li>
             <li><strong>Foundry Casting</strong> · Mg &amp; Al alloy casting</li>
             <li><strong>Cool Tech</strong> · Scanning Electron Microscopy</li>
             <li><strong>Burritos</strong> · I make a mean bean burrito</li>
