Add some side projects

--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
         </ul>
       </section>
       <section class="section portfolio stack">
-        <h2>Some Side Projects</h2>
+        <h2>Small Side Projects</h2>
         <ul class="grid-half">
           <li class="stack project shiny">
             <h3>
@@ -351,7 +351,7 @@
           </li>
           <li class="stack project shiny">
             <h3>
-              <a href="https://github.com/seanockert/secret-santa" title="View on Github">Secret Santa Matcher</a>
+              <a href="/secret-santa" title="Try it out">Secret Santa Matcher</a>
             </h3>
             <p>
               Generate random matches for a game of Secret Santa. Works without a DB or complex backend. Each
@@ -360,13 +360,19 @@
           </li>
           <li class="stack project shiny">
             <h3>
-              <a href="https://so-css-layouts.surge.sh" title="View on Github">CSS Layouts</a>
+              <a href="/parroty" title="Try it out">Parroty Phrasebook</a>
+            </h3>
+            <p>Translate phrases into any language. Uses a translation AI model and Neets TTS.</p>
+          </li>
+          <li class="stack project shiny">
+            <h3>
+              <a href="/css-layouts" title="View on Github">CSS Layouts</a>
             </h3>
             <p>Who needs a grid system any more? Some useful CSS layouts to drop into any project.</p>
           </li>
           <li class="stack project shiny">
             <h3>
-              <a href="https://so-tinysums.surge.sh/" title="View TinySums project">Tiny Sums</a>
+              <a href="/tiny-sums" title="View TinySums project">Tiny Sums</a>
             </h3>
             <p>
               Do back-of-the-envelope calculations using everyday words. A fun test of regex skills to build a language
@@ -375,9 +381,7 @@
           </li>
           <li class="stack project shiny">
             <h3>
-              <a href="https://so-learning-widgets-demo.surge.sh/" title="View learning widgets"
-                >Classroom Learning Widgets</a
-              >
+              <a href="/learning-widgets" title="View learning widgets">Classroom Learning Widgets</a>
             </h3>
             <p>
               Small widgets for teachers to use in their classroom: Countdown Timer, Hundreds Number Grid, Analog Clock.
@@ -387,11 +391,18 @@
 
           <li class="stack project shiny">
             <h3>
-              <a href="https://so-neto-email.surge.sh/" title="View Neto Email Content Generator project"
+              <a href="/email-content-generator" title="View Neto Email Content Generator project"
                 >Email Content Generator</a
               >
             </h3>
             <p>Construct emails from pre-witten content. Simple internal tool for Neto sales staff.</p>
+          </li>
+
+          <li class="stack project shiny">
+            <h3>
+              <a href="/unique-avatar-colors" title="Try it">Unique Avatar Colours</a>
+            </h3>
+            <p>Genetate avatars from unique IDs</p>
           </li>
         </ul>
       </section>
