--- a/cluckulator/index.html
+++ b/cluckulator/index.html
@@ -78,7 +78,7 @@
         gap: 0.5rem;
         justify-content: center;
         max-width: 60rem;
-        padding: env(safe-area-inset-top, 1rem) 1rem 2rem 1rem;
+        padding: 1rem 1rem 2rem 1rem;
       }
 
       button {
