--- a/cluckulator/index.html
+++ b/cluckulator/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&display=swap" rel="stylesheet" />
-    <link rel="manifest" href="/manifest.json" />
+    <link rel="manifest" href="https://seanockert.com/cluckulator/manifest.json" />
     <link rel="apple-touch-icon" href="icon-egg-512.png" />
     <link rel="shortcut icon" href="icon-egg.png" />
 
